--- a/blog/_drafts/visualization-with-diagrammeR.Rmd
+++ b/blog/_drafts/visualization-with-diagrammeR.Rmd
@@ -29,11 +29,11 @@ For exporting/printing/saving your diagrams, the package [DiagrammeRsvg](https:/
 library(DiagrammeR) ; library(DiagrammeRsvg) ; library(rsvg) 
 ```
 
-## example using DiagrammeR functions
+## Example using DiagrammeR functions
 
 A simple diagram:
-```{r}
 
+```{r}
 # define nodes dataframe
 nodes <- create_node_df(n = 4, 
                         type = "lower",
@@ -51,11 +51,14 @@ my_graph <- create_graph(nodes_df = nodes, edges_df = edges)
 
 # print graph
 render_graph(my_graph)
+```
 
+Use the `export_graph` function to save the figure as an image file, in this case a PNG:
+
+```{r, eval = FALSE}
 # export graph
 export_graph(my_graph, file_name = "simple.png",
              file_type = "PNG")
-
 ```
 
 
@@ -63,91 +66,99 @@ export_graph(my_graph, file_name = "simple.png",
 I've found it easiest and most customizable to create diagrams using Graphviz. 
 
 A simple diagram:
+
 ```{r}
-
-my_graph2 <- grViz("digraph{
+my_graphviz <- grViz("digraph{
          
-                   graph[rankdir = LR]  
-         
-                   node[shape = rectangle, style = filled]  
-                   A[label = 'Figure']
-                   B[label = 'Analysis.R']
-                   C[label = 'Data.csv']
+                     graph[rankdir = LR]
+                     
+                     node[shape = rectangle, style = filled]  
+                     A[label = 'Figure']
+                     B[label = 'Analysis.R']
+                     C[label = 'Data.csv']
 
-                   edge[color = black]
-                   B -> A
-                   C -> B
-
-                   }")
-
-# export graph
-export_svg(my_graph2) %>% charToRaw() %>% rsvg() %>% png::writePNG("simple_grv.png")  
+                     edge[color = black]
+                     B -> A
+                     C -> B
+                     
+                     }")
 
 ```
 
-A more complex diagram, specifying different colors for some nodes, and using subgraph clustering.  
-```{r}
+A GraphViz object requires a few more steps to save as an image file, such as a PNG:
 
-my_graph3 <- grViz("digraph{
-         
-                   graph[rankdir = LR]  
-         
-                   node[shape = rectangle, style = filled]  
-       
-                   node[fillcolor = Coral, margin = 0.2]
-                   A[label = 'Figure 1: Map']
-                   B[label = 'Figure 2: Metrics']
-       
-                   node[fillcolor = Cyan, margin = 0.2]
-                   C[label = 'Figures.Rmd']
-       
-                   node[fillcolor = Violet, margin = 0.2]
-                   D[label = 'Analysis_1.R']
-                   E[label = 'Analysis_2.R']
-                  
-                   subgraph cluster_0 {graph[shape = rectangle]; 
-                                       style = rounded; bgcolor = Gold; 
-                                       label = 'Data Source 1'
-                                      
-                                       node[shape = rectangle, fillcolor = LemonChiffon, margin = 0.25];
-                                       F[label = 'my_dataframe_1.csv'];
-                                       G[label = 'my_dataframe_2.csv']
-                                       }    
-                           
-                   subgraph cluster_1 {graph[shape = rectangle]; 
-                                       style = rounded; bgcolor = Gold; 
-                                       label = 'Data Source 2'
-                                          
-                                       node[shape = rectangle, fillcolor = LemonChiffon, margin = 0.25];
-                                       H[label = 'my_dataframe_3.csv'];
-                                       I[label = 'my_dataframe_4.csv']
-                                       } 
-                   
-                   edge[color = black, arrowhead = vee, arrowsize = 1.25]
-                   C -> {A B}
-                   D -> C
-                   E -> C
-                   F -> D
-                   G -> D
-                   H -> E
-                   I -> E
-                  
-                   }")
-
+```{r, eval = FALSE}
 # export graph
-export_svg(my_graph3) %>% charToRaw() %>% rsvg() %>% png::writePNG("example_grv.png")  
+export_svg(my_graphviz) %>%
+  charToRaw() %>%
+  rsvg() %>%
+  png::writePNG("simple_grv.png")
+```
 
+A more complex diagram, specifying different colors for some nodes, and using subgraph clustering.  
+
+```{r}
+grViz("digraph{
+
+      graph[rankdir = LR]
+  
+      node[shape = rectangle, style = filled]
+  
+      node[fillcolor = Coral, margin = 0.2]
+      A[label = 'Figure 1: Map']
+      B[label = 'Figure 2: Metrics']
+  
+      node[fillcolor = Cyan, margin = 0.2]
+      C[label = 'Figures.Rmd']
+  
+      node[fillcolor = Violet, margin = 0.2]
+      D[label = 'Analysis_1.R']
+      E[label = 'Analysis_2.R']
+  
+      subgraph cluster_0 {
+        graph[shape = rectangle]
+        style = rounded
+        bgcolor = Gold
+    
+        label = 'Data Source 1'
+        node[shape = rectangle, fillcolor = LemonChiffon, margin = 0.25]
+        F[label = 'my_dataframe_1.csv']
+        G[label = 'my_dataframe_2.csv']
+      }
+  
+      subgraph cluster_1 {
+         graph[shape = rectangle]
+         style = rounded
+         bgcolor = Gold
+    
+         label = 'Data Source 2'
+         node[shape = rectangle, fillcolor = LemonChiffon, margin = 0.25]
+         H[label = 'my_dataframe_3.csv']
+         I[label = 'my_dataframe_4.csv']
+      }
+  
+      edge[color = black, arrowhead = vee, arrowsize = 1.25]
+      C -> {A B}
+      D -> C
+      E -> C
+      F -> D
+      G -> D
+      H -> E
+      I -> E
+      
+      }")
 ```
 
 Adapted from a more detailed "real life" example located in this research [data package](https://knb.ecoinformatics.org/view/urn:uuid:64e28478-7964-4fcb-b002-49a7915fbe4e).  
 
 
 ## Structural equation model example using mermaid
+
 It's also pretty easy to create diagrams in mermaid, but it seems slightly less customizable.  It also not currently possible to export a diagram created in mermaid to a static file (ex: svg, png).  If you need to create a figure for publication, for example, it may be best to use the Graphviz implementation above.   
 
 A simple diagram:
-```{r}
 
+```{r}
 my_graph4 <- mermaid("
                      graph LR
                      A[Nutrients]
@@ -158,30 +169,28 @@ my_graph4
 ```
 
 A more complex diagram specifying colors and shapes for nodes, and labels for edges.
+
 ```{r}
+mermaid("
+        graph BT
+        A((Salinity))
+        A-->B(Barnacles)
+        B-.->|-0.10|B1{Mussels}
+        A-- 0.30 -->B1
 
-my_graph5 <- mermaid("
-                     graph BT
-                     A((Salinity))
-                        A-->B(Barnacles)
-                        B-.->|-0.10|B1{Mussels}
-                        A-- 0.30 -->B1
-                       
-                     C[Air Temp]
-                        C-->B
-                        C-.->E(Macroalgae)
-                           E-->B1
-                        C== 0.89 ==>B1
+        C[Air Temp]
+        C-->B
+        C-.->E(Macroalgae)
+        E-->B1
+        C== 0.89 ==>B1
 
-                        style A fill:#FFF, stroke:#333, stroke-width:4px
-                        style B fill:#9AA, stroke:#9AA, stroke-width:2px
-                        style B1 fill:#879, stroke:#333, stroke-width:1px
-                        style C fill:#ADF, stroke:#333, stroke-width:2px
-                        style E fill:#9C2, stroke:#9C2, stroke-width:2px
-                        
-                     ")
+        style A fill:#FFF, stroke:#333, stroke-width:4px
+        style B fill:#9AA, stroke:#9AA, stroke-width:2px
+        style B1 fill:#879, stroke:#333, stroke-width:1px
+        style C fill:#ADF, stroke:#333, stroke-width:2px
+        style E fill:#9C2, stroke:#9C2, stroke-width:2px
 
-my_graph5
+        ")
 ```
-Adapted from Klinger & Blake (in prep.)
 
+Adapted from Klinger & Blake (in prep.)
