ggplot roundup blog

--- a/blog/_drafts/2010-01-09-ggplot-roundup.Rmd
+++ b/blog/_drafts/2010-01-09-ggplot-roundup.Rmd
@@ -2,7 +2,9 @@
 # DO NOT EDIT THE .md ON GITHUB
 # DO EDIT THE .Rmd AND knit THE .md LOCALLY
 title: ggplot tricks not to forget about
-author: khondula
+author: 
+ - khondula
+ - qread
 tags:
  - ggplot
  - dataviz
