--- a/blog/_drafts/2020-06-24-zoom-bp.md
+++ b/blog/_drafts/2020-06-24-zoom-bp.md
@@ -11,19 +11,19 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 1. Revisit the **scope of your meeting goals** and adjust your expectations. Goals for each meeting or session may need to be reduced compared to what could be accomplished during all-day in-person meetings where team members have reduced other distractions and build collective energy from the group. Consider the number and types of people that can attend your meeting. Pursuit team size is based on what is known about effective collaborations, but a virtual format may provide the opportunity for limited participation from people that may not have otherwise been able to attend an in-person meeting. 
 
-2. When **scheduling**, carefully consider timezones, fatigue, and adding more structure to your agenda than you would for an in-person meeting. Identify the range of time zones participants will be joining from. Note that there is only 1 hour of the day that allows most of the world (except New Zealand) to participate between midnight and 6:30am local time--2:30 GMT. If your team is spread out around the world, consider having breaks long enough to accomodate a meal. Scheduling 3-4 hours of meeting per day may also make it easier to accomodate time zone differences. Let SESYNC staff know when you are holding meetings and whether you would like us to ne "on call" to help out when things go pear-shaped.  
+2. When **scheduling**, carefully consider timezones, fatigue, and adding more structure to your agenda than you would for an in-person meeting. Identify the range of time zones participants will be joining from. Note that there is only 1 hour of the day that allows most of the world (except New Zealand) to participate outside of midnight and 6:30am local time--2:30 GMT. If your team is spread out around the world, consider having breaks long enough to accomodate a meal. Scheduling 3-4 hours of meeting per day may also make it easier to accomodate time zone differences. Let SESYNC staff know when you are holding meetings and whether you would like us to ne "on call" to help out when things go pear-shaped.  
 
-3. Consider one-on-one **pre-meetings** with participants especially if it is your teams first meeting. This could be facilitated with a questionaire to gain insight from each participant about what they hope to gain from the meeting, what they hope to contribute, and what they may be anxious about. 
+3. Consider one-on-one **pre-meetings** with participants especially if it is your team's first meeting. This could be facilitated with a questionnaire to gain insight from each participant about what they hope to gain from the meeting, what they hope to contribute, and what they may be anxious about. 
 
 4. Have a logistics plan, test the plan, and **have a backup plan**. Virtual meetings are less forgiving if technology is not working as planned. Test the platform you are using ahead of time if you have not used it before or are planning to use a feature you are not familiar with. Reach out to cyberhelp@sesync.org for help with technology. Make sure there is a way to communicate outside video conference. Provide content and links to content to download. Determine how you will capture content of meeting, e.g. know whether chat messages will be saved, if participants are comfortable having meeting recorded. 
 
-5. Design your meeting to **ensure accessibility and inclusivity**. Will participants in different countries have access to all platforms being used? Is there a way to participate fully without high-bandwisdth internet connectivity or multiple monitors in a home office? Does your team have deaf or hard-of-hearing participants that would benefit from a service like real-time captioning or video relay services? Consider asking team members in advance whether they are comfortable and willing to use their video during any or all of the meeting. 
+5. Design your meeting to **ensure accessibility and inclusivity**. Will participants in different countries have access to all platforms being used? Is there a way to participate fully without high-bandwidth internet connectivity or multiple monitors in a home office? Does your team have deaf or hard-of-hearing participants that would benefit from a service like real-time captioning or video relay services? Consider asking team members in advance whether they are comfortable and willing to use their video during any or all of the meeting. 
 
 ## During your meeting
 
-1. **Orient your team** with a tour of the virtual environment, code of conduct, and what to expect. This may include clarifying whether sessions will be recorded, if there is consent for taking screenshots of the meeting e.g to share on social media. Be clear about how to participate e.g. whether the host or co-host is keeping an eye on the chat window or participants list for questions and hand-raise emojis. Don't assume that everyone is familiar with the features of any given software.  
+1. **Orient your team** with a tour of the virtual environment, code of conduct, and what to expect. This may include clarifying whether sessions will be recorded, if there is consent for taking screenshots of the meeting e.g to share on social media. Be clear about how to participate e.g. whether the host or co-host is keeping an eye on the chat window or participants list for questions and hand-raise emojis. Don't assume that everyone is familiar with the features of any given software. 
 
-2. Consider **designating a co-host** who is not the presenter to manage logistics during a session. It can be difficult for a present to manage participation or handle unanticipated distruptions while delivering content. SESYNC staff may be able to fulfill this role, or a co-lead that can use chat and private messages to moderate the flow of discussion and make adjustments in real time. You can share this responsibility among team members by rotating the co-host role between sessions. In Zoom meetings, both the host and co-hosts can open a window to manage participants to monitor for alters such as raised hands and control mute settings. Only a host can create breakout rooms, transfer hosting roles, manage polls, or end a meeting. 
+2. Consider **designating a co-host** who is not the presenter to manage logistics during a session. It can be difficult for a present to manage participation or handle unanticipated distruptions while delivering content. SESYNC staff may be able to fulfill this role, or a co-lead that can use chat and private messages to moderate the flow of discussion and make adjustments in real time. You can share this responsibility among team members by rotating the co-host role between sessions. In Zoom meetings, both the host and co-hosts can open a window to manage participants to monitor for alerts such as raised hands and control mute settings. Only a host can create breakout rooms, transfer hosting roles, manage polls, or end a meeting. 
 
 3. Use a shared note-taking document and provide alternate ways to access or download material being presented, such as a link to a cloud-based file system like Google Drive or SESYNC's file share. 
 
