edits to zoom qs

--- a/quickstart/_drafts/2020-06-25-zoom-qs.md
+++ b/quickstart/_drafts/2020-06-25-zoom-qs.md
@@ -6,13 +6,18 @@ tags:
 
 *What we can provide*
 
-Free zoom limits meetings to 45 minutes. We can provide access to enterprise zoom and schedule meetings for your team without a time limit. A SESYNC staff member will need to schedule the meeting and be the meeting "host"
+1. **Access to enterprise zoom meetings** - Free zoom limits meetings to 45 minutes. We can provide access to enterprise zoom and schedule meetings for your team without a time limit. A SESYNC staff member will need to schedule the meeting and be the meeting "host" but can assign meeting participants co-host role or designate someone else as the host. 
+
+2. **Help customize your meeting settings** - Start a discussion with sesync staff by emailing (teamhelp or cyberhelp?) to discuss how to best make use of virtual conference technology for your meeting. Do you want to allow all guests in your meeting to be able to chat privately with each other? Have you ensured that everyone in the meeting can rename themselves e.g to add pronouns? Will the meeting chat automatically be saved?
+
+3. **Manage participants during zoom meetings** - A sesync staff member can act as meeting host or co-host to allow everyone on your team to focus on discussion rather than meeting logistics. This may be particularly helpful if you plan to use features such as [breakout rooms](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms), annotating shared content/whiteboard, or keeping track of [non-verbal feedback](https://support.zoom.us/hc/en-us/articles/115001286183-Nonverbal-feedback-during-meetings).
+
+4. **Remote facilitation during zoom meetings** - Beyond logistical support described above, sesync staff is still offering facilitation support for team meetings. (add some language here about how far in advance to contact, etc.)
 
 
 # Meeting Roles
 
-See zoom documentation [here](https://support.zoom.us/hc/en-us/articles/360040324512-Roles-in-a-meeting
-) including a comprehensive table
+Everyone who participates in a zoom call does not have access to the same features for controlling a meeting. There is one meeting **host** at any time which by default is the person who scheduled the meeting. That person can designate meeting **co-hosts** that have additional settings and controls. Everyone else is a **guest**. See a comprehensive table comparing roles on zoom's help page [here](https://support.zoom.us/hc/en-us/articles/360040324512-Roles-in-a-meeting). 
 
 ## Host
 
@@ -26,7 +31,8 @@ See zoom documentation [here](https://support.zoom.us/hc/en-us/articles/36004032
 * Once a meeting starts, the host can assign co-host role to meeting participants
 * There is no limit on the number of co-hosts
 * Co-hosts can manage participants such as mute/unmute all or select participants, remove attendees
-* Co-hosts cannot answer polls, only guests
+* Co-hosts cannot answer polls, only guests. 
+
 
 # Screen sharing 
 
@@ -36,7 +42,9 @@ See zoom documentation [here](https://support.zoom.us/hc/en-us/articles/36004032
 
 # Breakout Rooms
 
-[zoom help doc](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms)
+If you have more than 8-10 (???) participants in your meeting, consider using breakout rooms to facilitate smaller group discussions. You can either have a random assignment of *n* people to *m* rooms, or manually arrange who goes to which room. This needs to be arranged by the meeting **host** (see description of roles above). The host can broadcast a message to all breakout rooms e.g. when to wrap up discussion, and can switch between breakout rooms. 
+
+See Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms) for more information. 
 
 # Random
 
