--- a/blog/_posts/2020-07-06-zoom-bp.md
+++ b/blog/_posts/2020-07-06-zoom-bp.md
@@ -24,7 +24,7 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 1. **Orient your team** with a tour of the virtual environment, code of conduct, and what to expect. This may include clarifying whether sessions will be recorded, if there is consent for taking screenshots of the meeting e.g to share on social media. Be clear about how to participate e.g. whether the host or co-host is keeping an eye on the chat window or participants list for questions and hand-raise emojis. Don't assume that everyone is familiar with the features of any given software. 
 
-2. Consider **designating a co-host** who is not the presenter to manage logistics during a session. It can be difficult to simultaneously manage participation or handle unanticipated distruptions while delivering content. SESYNC staff may be able to fulfill this role, or a co-lead that can use chat and private messages to moderate the flow of discussion and make adjustments in real time. Consider sharing this responsibility among team members by rotating the co-host role between sessions. Check out the [Zoom meeting quickstart]() page for more details on "host" and "co-host" meeting roles. 
+2. Consider **designating a co-host** who is not the presenter to manage logistics during a session. It can be difficult to simultaneously manage participation or handle unanticipated distruptions while delivering content. SESYNC staff may be able to fulfill this role, or a co-lead that can use chat and private messages to moderate the flow of discussion and make adjustments in real time. Consider sharing this responsibility among team members by rotating the co-host role between sessions. Check out the [Zoom meeting quickstart](https://cyberhelp.sesync.org/quickstart/zoom-qs.html) page for more details on "host" and "co-host" meeting roles. 
 
 3. Use a **shared note-taking** document and provide alternate ways to access or download material being presented, such as a link to a cloud-based file system like Google Drive or SESYNC's file share. Determine ahead of time whether the meeting chat will be saved automatically in case there is discussion taking place that you want to preserve. Note that private chat messages between Zoom meeting participants are not visible to the host, however a meeting host can disable private messaging. 
 
