--- a/quickstart/_posts/2020-07-06-zoom-qs.md
+++ b/quickstart/_posts/2020-07-06-zoom-qs.md
@@ -1,8 +1,10 @@
 ---
-title: Zoom for SESYNC Cheat Sheet
+title: Zoom for SESYNC Teams
 tags:
   - Zoom
 ---
+
+> Depending on your interests and needs, SESYNC can do any or all of the following: a) test out meeting settings and consult ahead of time; b) just schedule a meeting and transfer host role at meeting start; c) act as host or co-host throughout one or more meeting sessions to manage participants, breakout rooms, polls, and/or shared content; d) be "on call" during your meeting time for real-time support over chat, phone, or video. 
 
 *What we can provide*
 
@@ -29,8 +31,6 @@ Everyone who participates in a Zoom call does not have access to the same featur
 * There is no limit on the number of co-hosts.
 * Co-hosts can manage participants such as mute/unmute all or select participants, remove attendees, or lock a meeting.
 * Co-hosts cannot answer polls, only guests. 
-
-> Depending on your interests and needs, SESYNC can do any or all of the following: a) just schedule a meeting and transfer host role; b) act as host or co-host during meeting sessions to manage participants, breakout rooms, polls, and/or shared content; c) be "on call" during your meeting time for real-time support over chat, phone, or video. 
 
 # Screen Sharing 
 
