add to planning1

--- a/blog/_posts/2020-07-06-zoom-bp.md
+++ b/blog/_posts/2020-07-06-zoom-bp.md
@@ -10,9 +10,9 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 ## Planning and preparation
 
-1. Revisit the **scope of your meeting goals** and adjust your expectations. Goals for each meeting or session may need to be reduced compared to what could be accomplished during all-day in-person meetings where team members have reduced other distractions and build collective energy from the group. 
+1. Revisit the **scope of your meeting goals** and adjust your expectations. Goals for each meeting or session may need to be reduced compared to what could be accomplished during all-day in-person meetings where team members have reduced other distractions and build collective energy from the group. Reconsider whether activities done asynchronously can replace synchronous meetings or discussion to ensure "face-to-face" meeting time is used most effectively.
 
-2. When **scheduling**, carefully consider timezones, fatigue, and adding more structure to your agenda than you would for an in-person meeting. Identify the range of time zones participants will be joining from. Note that there is only 1 hour of the day that allows most of the world (except New Zealand) to participate outside of midnight and 6:30am local time--2:30 GMT. If your team is spread out around the world, consider having breaks long enough to accomodate a meal. Scheduling 3-4 hours of meeting per day may also make it easier to accomodate time zone differences. Let SESYNC staff know when you are holding meetings and whether you would like us to ne "on call" to help out when things go pear-shaped.  
+2. When **scheduling**, carefully consider timezones, fatigue, and adding more structure to your agenda than you would for an in-person meeting. Identify the range of time zones participants will be joining from. Note that there is only 1 hour of the day that allows most of the world (except New Zealand) to participate outside of midnight and 6:30am local time--2:30 GMT. If your team is spread out around the world, consider having breaks long enough to accomodate a meal. Scheduling 3-4 hours of meeting per day may also make it easier to accomodate time zone differences. Let SESYNC staff know when you are holding meetings and whether you would like us to be "on call" to help out when things go pear-shaped.  
 
 3. Consider one-on-one **pre-meetings** with participants especially if it is your team's first meeting. This could be facilitated with a questionnaire to gain insight from each participant about what they hope to gain from the meeting, what they hope to contribute, and what they may be anxious about. 
 
