--- a/blog/_posts/2020-07-06-zoom-bp.md
+++ b/blog/_posts/2020-07-06-zoom-bp.md
@@ -28,7 +28,7 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 3. Use a **shared note-taking** document and provide alternate ways to access or download material being presented, such as a link to a cloud-based file system like Google Drive or SESYNC's file share. Determine ahead of time whether the meeting chat will be saved automatically in case there is discussion taking place that you want to preserve. Note that private [chat messages](https://support.zoom.us/hc/en-us/articles/203650445-In-meeting-chat) between Zoom meeting participants are not visible to the host, however a meeting host can disable private messaging. 
 
-4. **Promote focus**. Realize that there is a danger for e-conferences or virtual meetings to be taken less seriously than in-person meetings because there is no travel involved and participants are generally not removed from their everyday environment. Turn off visual and audio notifications on your computer (e.g. Do Not Disturb setting on Macs or System > Turn off Notifications on PC). Dedicate as much screen real estate to your meeting as possible, and consider sharing only a relevant window rather than your entire screen when sharing content if you don't need to switch between windows. If possible, consider leveraging hardware to ensure that team members will be able to see your face well--seeing each other helps to create a more personal experience for sessions focused on conversation. Diffuse natural light is the best for illuminating your face, but when it is unavailable or unreliable rearranging several lamps to your desk set-up can be a good substitute. 
+4. **Promote focus**. Realize that there is a danger for e-conferences or virtual meetings to be taken less seriously than in-person meetings because there is no travel involved and participants are generally not removed from their everyday environment. Turn off visual and audio notifications on your computer (e.g. Do Not Disturb setting on Macs or System > Turn off Notifications on PC). Dedicate as much screen real estate to your meeting as possible, and consider sharing only a relevant window rather than your entire screen when sharing content if you don't need to switch between windows. If possible, consider leveraging hardware to ensure that team members will be able to see your face well&mdash;seeing each other helps to create a more personal experience for sessions focused on conversation. Diffuse natural light is the best for illuminating your face, but when it is unavailable or unreliable rearranging several lamps to your desk set-up can be a good substitute. 
 
 5. **Create opportunities for informal interaction.** Allow a space for participants to share information about themselves, their expertise, and contact methods to each other outside of a round of introductions during live video. This can be at the beginning of a shared note-taking document. Recognize that team members at different career stages may have different needs or desires for networking with colleagues. If it is your team's first Pursuit meeting, consider devising activities that promote a sense of togetherness--anything from polls during meeting breaks (cutest pet, best Zoom background, silliest hat) to [organized Strava events](https://www.sfssummerofscience.com/fun-run). 
 
