--- a/blog/_posts/2020-07-06-zoom-bp.md
+++ b/blog/_posts/2020-07-06-zoom-bp.md
@@ -35,7 +35,7 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 ## After the meeting
 
-*Don't forget to follow up!* Welcome asynchronous contributions and provide guidelines on how to do so. Even for team members that are virtually present, it may be more difficult to fully engage during plenary sessions due to time zone differences, hardware or connectivity issues, distractions, or other issues. Inviting contributions outside of the scheduled meeting time e.g. in a shared note-taking document, Slack workspace, or GitHub issues, provides mechanisms for everyone to more fully engage. 
+*Don't forget to follow up!* Welcome asynchronous contributions and provide guidelines on how to do so. Even for team members that are virtually present, it may be more difficult to fully engage during plenary sessions due to time zone differences, hardware or connectivity issues, distractions, or other issues you may not be aware of. Inviting contributions outside of the scheduled meeting time e.g. in a shared note-taking document, Slack workspace, or GitHub issues, provides a mechanism for everyone to more fully engage. 
 
 
 ## Check out More Resources
