gah another typo

--- a/blog/_posts/2020-07-06-zoom-bp.md
+++ b/blog/_posts/2020-07-06-zoom-bp.md
@@ -16,7 +16,7 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 3. Consider one-on-one **pre-meetings** with participants especially if it is your team's first meeting. This could be facilitated with a questionnaire to gain insight from each participant about what they hope to gain from the meeting, what they hope to contribute, and what they may be anxious about. 
 
-4. Have a **technology plan**, test it out, and **have a backup plan**. Virtual meetings are less forgiving if technology is not working so make sure to identify a seperate channel that is a go-to for communication outside of the video call. If you intend to use a new platform or a feature that you are not familiar with (e.g. breakout rooms), set time aside to test it out before your meeting. It may also be helpful to provide content and/or links for participants to download content in case the video quality of shared content is reduced. Reach out to cyberhelpe@sesync.org for help or to set up a time to test out meeting settings. 
+4. Have a **technology plan**, test it out, and **have a backup plan**. Virtual meetings are less forgiving if technology is not working so make sure to identify a seperate channel that is a go-to for communication outside of the video call. If you intend to use a new platform or a feature that you are not familiar with (e.g. breakout rooms), set time aside to test it out before your meeting. It may also be helpful to provide content and/or links for participants to download content in case the video quality of shared content is reduced. Reach out to cyberhelp@sesync.org for help or to set up a time to test out meeting settings. 
 
 5. Design your meeting to **ensure accessibility and inclusivity**. Will participants in different countries have access to all platforms being used? Is there a way to participate fully without high-bandwidth internet connectivity or multiple monitors in a home office? Does your team have deaf or hard-of-hearing participants that would benefit from a service like real-time captioning or video relay services? Consider asking team members in advance whether they are comfortable and willing to use their video during any or all of the meeting. 
 
