add gitlab zoom handbook

--- a/quickstart/_posts/2020-07-06-zoom-qs.md
+++ b/quickstart/_posts/2020-07-06-zoom-qs.md
@@ -48,6 +48,7 @@ See Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/206476093-
 
 # More Tips and Considerations
 
+* GitLab's [handbook for using Zoom](https://about.gitlab.com/handbook/tools-and-tips/zoom/) is a great resource.
 * Obtain consent from all individuals prior to recording a meeting in order to comply with state and federal laws.
 * Zoom's web client has limited features compared to the desktop or phone app, e.g. screen sharing may depend on your operating system. See more details in the table [here](https://support.zoom.us/hc/en-us/articles/360027397692#note)
 * You can schedule one-time meetings, recurring meetings, or start a meeting "on the fly". 
